[package]
name = "nd-tic-tac-toe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
itertools = "0.11.0"

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
